--- a/vignettes/digital_unrolling.rmd
+++ b/vignettes/digital_unrolling.rmd
@@ -1,28 +1,29 @@
 ---
 title: "Digital unrolling"
+date: "Last compiled: `r format(Sys.time(), '%d %B %Y')`"
 format:
   html:
     default-image-extension: png
 editor: visual
 ---
 
-## Introduction
-
 In this tutorial, we will look at how to perform digital unrolling of folded "swiss roll" tissue sections.
-
-```{r warning=FALSE, message=FALSE}
-library(STUtility2)
-se_mcolon <- readRDS(system.file("extdata/mousecolon", 
-                                 "se_mcolon", 
-                                 package = "STUtility2"))
-```
 
 The data set comes from a "swiss roll" of a mouse colon which was published by M. Parigi et al. (including yours truly) [*The spatial transcriptomic landscape of the healing mouse intestine following damage*](https://www.nature.com/articles/s41467-022-28497-0).
 
-Let's have a quick look at the data
+```{r warning=FALSE, message=FALSE}
+library(STUtility2)
+```
+
+## Mouse colon data
+
+Let's load and have a quick look at the data.
 
 ```{r}
-library(STUtility2)
+se_mcolon <- readRDS(system.file("extdata/mousecolon", 
+                                 "se_mcolon", 
+                                 package = "STUtility2"))
+
 se_mcolon <- se_mcolon |> 
   LoadImages()
 
@@ -41,9 +42,11 @@ MapFeatures(se_mcolon, features = "Fxyd4",
             colors = c("darkblue", "cyan", "yellow", "red", "darkred"))
 ```
 
-The goal of this tutorial is to show how `STUtility2` can be used to find an "unrolled" coordinate system. To achieve this, we can start a shiny application with `CutSpatialNetwork` which will allow us to do some interesting stuff. More about that later.
+## Pre-processing
 
-Before we get started, we need to do a little bit of pre-processing. First, we will tile the H&E image using `TileImage`. Tiling is necessary to make it possible to visualize the H&E images in a more interactivee way. The path to the raw H&E image can be found with `GetStaffli(se_mcolon)@imgs`.
+The goal of this tutorial is to show how `STUtility2` can be used to find an "unrolled" coordinate system. To achieve this, we can start a shiny application with `CutSpatialNetwork()` which will allow us to do some interesting stuff. More about that later.
+
+Before we get started, we need to do a little bit of pre-processing. First, we will tile the H&E image using `TileImage()`. Tiling is necessary to make it possible to visualize the H&E images in a more interactive way. The path to the raw H&E image can be found with `GetStaffli(se_mcolon)@imgs`.
 
 NB: If the image file has been moved, `TileImage` the path might no longer be valid. Make sure that the path is valid before proceeding. To get decent resolution, we you should use the "tissue_hires_image.png" output by spaceranger.
 
@@ -52,7 +55,7 @@ im <- GetStaffli(se_mcolon)@imgs[1]
 sprintf("File exists: %s", file.exists(im))
 ```
 
-Now we can load the image with `magick`, tile the image and export it to a local directory. The function returns the path to the directory the tiles wheee exported to. We will save this to a variable called `tilepath`
+Now we can load the image with `magick`, tile the image and export it to a local directory. The function returns the path to the directory the tiles were exported to. We will save this to a variable called `tilepath`
 
 ```{r eval=FALSE}
 library(magick)
@@ -60,7 +63,7 @@ im <- image_read(im)
 tilepath <- TileImage(im = im, outpath = "~/Downloads/")
 ```
 
-The `CutSpatialNetwork` function requires another file to work properly. This file holds information about the "spatial network" (see `GetSpatialNetwork` for details) which will be used in the shiny application to define how spots in the Visium data are connected to each other.
+The `CutSpatialNetwork()` function requires another file to work properly. This file holds information about the "spatial network" (see `GetSpatialNetwork()` for details) which will be used in the shiny application to define how spots in the Visium data are connected to each other.
 
 To demonstrate what this means, we can generate a spatial network and visualize it.
 
@@ -83,13 +86,15 @@ Now let's export this spatial network to make it available for our shiny applica
 export_graph(se_mcolon, sampleID = 1, outdir = tilepath$datapath)
 ```
 
-Now we are ready to run the app! One the app loads, you should see the H&E image with spots and edges. The goal is to disconnect the layer of the roll by cutting the edges between spots in different layers. Cutting can be done by holding the SHIFT key while move the cursor across edges which will make them red. You can also "repair" edges by holding the CTRL key.
+## Prepare network
+
+Now we are ready to run the app! Once the app loads, you should see the H&E image with spots and edges. The goal is to disconnect the layer of the roll by cutting the edges between spots in different layers. Cutting can be done by holding the `SHIFT` key while move the cursor across edges which will make them red. You can also "repair" edges by holding the `CTRL` key.
 
 The image below illustrates how edges between two layers have been sliced.
 
 ![*Sliced edges are colored in red*](cut.png)
 
-Once all edges has been cut, you have to press the "Quit and save" button. If you just close the app without pressing "Quit and save", the results will not be returned back to R.
+Once all edges has been cut, you have to press the `Quit & Save` button. If you just close the app without pressing "Quit & Save", the results will not be returned back to R.
 
 NB: We need to make sure to save the output to a variable. Here, we will save the output to `tidy_network`.
 
@@ -143,7 +148,9 @@ p1 + p2
 
 And just like that, we have separated the the layers!
 
-Now comes the part where we do the actual "unrolling" using `AdjustTissueCoordinates`. There are a few important things to note here. `AdjustTissueCoordinates` applies an algorithm to sort nodes in the spatial graph between the end points. Distances between nodes are used as a proxy for the actual distances in the tissue. These distances between nodes are the shortest paths, i.e. the minimum number of edges needed to visit (geodesic). For obvious reasons, distances cannot be calculated between nodes that are not connected, and for this reason, the function only handles connected graphs.
+## Unrolling the network
+
+Now comes the part where we do the actual "unrolling" using `AdjustTissueCoordinates()`. There are a few important things to note here. `AdjustTissueCoordinates` applies an algorithm to sort nodes in the spatial graph between the end points. Distances between nodes are used as a proxy for the actual distances in the tissue. These distances between nodes are the shortest paths, i.e. the minimum number of edges needed to visit (geodesic). For obvious reasons, distances cannot be calculated between nodes that are not connected, and for this reason, the function only handles connected graphs.
 
 Unfortunately, our roll is not fully connected, so the function will only deal with the largest sub graph.
 
@@ -236,3 +243,27 @@ pheatmap::pheatmap(binMat, cluster_cols = FALSE, border_color = FALSE,
                    breaks = seq(-1, 1, length.out = 50), 
                    color = scico::scico(palette = "bam", n = 51))
 ```
+
+<br>
+
+------------------------------------------------------------------------
+
+<details open>
+
+<summary>**Package version**</summary>
+
+-   `STUtility2`: `r packageVersion("STUtility2")`
+
+</details>
+
+<details>
+
+<summary>**Session info**</summary>
+
+```{r}
+sessionInfo()
+```
+
+</details>
+
+<br>
